--- a/kmeans.ipynb
+++ b/kmeans.ipynb
@@ -21,7 +21,212 @@
         "id": "1qHTa9XrPaL7"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "import numpy as np\n",
+        "import matplotlib.pyplot as plt\n",
+        "from sklearn.datasets import load_iris\n",
+        "from sklearn.preprocessing import StandardScaler\n",
+        "from sklearn.decomposition import PCA\n",
+        "from sklearn.metrics import silhouette_score\n",
+        "\n",
+        "class K_Means:\n",
+        "\n",
+        "    def __init__(self, k=2, tolerance=0.001, max_iter=500):\n",
+        "        self.k = k\n",
+        "        self.max_iterations = max_iter\n",
+        "        self.tolerance = tolerance\n",
+        "\n",
+        "    def euclidean_distance(self, point1, point2):\n",
+        "        return np.linalg.norm(point1 - point2)\n",
+        "\n",
+        "    def predict(self, data):\n",
+        "        distances = [self.euclidean_distance(data, self.centroids[centroid]) for centroid in self.centroids]\n",
+        "        classification = distances.index(min(distances))\n",
+        "        return classification\n",
+        "\n",
+        "    def fit(self, data):\n",
+        "        self.centroids = {}\n",
+        "        for i in range(self.k):\n",
+        "            self.centroids[i] = data[i]\n",
+        "\n",
+        "        for i in range(self.max_iterations):\n",
+        "            self.classes = {j: [] for j in range(self.k)}\n",
+        "\n",
+        "            for point in data:\n",
+        "                distances = [self.euclidean_distance(point, self.centroids[centroid]) for centroid in self.centroids]\n",
+        "                cluster_index = distances.index(min(distances))\n",
+        "                self.classes[cluster_index].append(point)\n",
+        "\n",
+        "            previous = dict(self.centroids)\n",
+        "            for cluster_index in self.classes:\n",
+        "                self.centroids[cluster_index] = np.average(self.classes[cluster_index], axis=0)\n",
+        "\n",
+        "            isOptimal = True\n",
+        "            for centroid in self.centroids:\n",
+        "                original_centroid = previous[centroid]\n",
+        "                curr = self.centroids[centroid]\n",
+        "                if np.sum((curr - original_centroid)/original_centroid * 100.0) > self.tolerance:\n",
+        "                    isOptimal = False\n",
+        "\n",
+        "            if isOptimal:\n",
+        "                break\n",
+        "\n",
+        "\n",
+        "        self.labels_ = []\n",
+        "        for i in range(len(data)):\n",
+        "            self.labels_.append(self.predict(data[i]))\n",
+        "\n",
+        "def main():\n",
+        "\n",
+        "    iris = load_iris()\n",
+        "    X = iris.data\n",
+        "    y = iris.target\n",
+        "\n",
+        "\n",
+        "    scaler = StandardScaler()\n",
+        "    X = scaler.fit_transform(X)\n",
+        "\n",
+        "\n",
+        "    pca = PCA(n_components=2)\n",
+        "    X_2d = pca.fit_transform(X)\n",
+        "\n",
+        "\n",
+        "    k = 3\n",
+        "    k_means = K_Means(k=k)\n",
+        "    k_means.fit(X_2d)\n",
+        "\n",
+        "\n",
+        "    score = silhouette_score(X_2d, k_means.labels_)\n",
+        "    print(f\"Silhouette Score (k={k}): {score:.4f}\")\n",
+        "\n",
+        "\n",
+        "    colors = 10 * [\"r\", \"g\", \"b\", \"c\", \"m\", \"y\"]\n",
+        "\n",
+        "    plt.figure(figsize=(8, 6))\n",
+        "    for centroid in k_means.centroids:\n",
+        "        plt.scatter(*k_means.centroids[centroid], marker=\"x\", s=150, linewidths=3, color='black', label=f'Centróide {centroid}')\n",
+        "\n",
+        "    for cluster_index in k_means.classes:\n",
+        "        color = colors[cluster_index]\n",
+        "        for point in k_means.classes[cluster_index]:\n",
+        "            plt.scatter(point[0], point[1], color=color, s=30)\n",
+        "\n",
+        "    plt.title(\"K-Means Clustering com base Iris (sem sklearn.cluster)\")\n",
+        "    plt.xlabel(\"Componente principal 1\")\n",
+        "    plt.ylabel(\"Componente principal 2\")\n",
+        "    plt.legend()\n",
+        "    plt.show()\n",
+        "\n",
+        "if __name__ == \"__main__\":\n",
+        "    main()\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "import matplotlib.pyplot as plt\n",
+        "from sklearn.datasets import load_iris\n",
+        "from sklearn.preprocessing import StandardScaler\n",
+        "from sklearn.decomposition import PCA\n",
+        "from sklearn.metrics import silhouette_score\n",
+        "\n",
+        "class K_Means:\n",
+        "\n",
+        "    def __init__(self, k=2, tolerance=0.001, max_iter=500):\n",
+        "        self.k = k\n",
+        "        self.max_iterations = max_iter\n",
+        "        self.tolerance = tolerance\n",
+        "\n",
+        "    def euclidean_distance(self, point1, point2):\n",
+        "        return np.linalg.norm(point1 - point2)\n",
+        "\n",
+        "    def predict(self, data):\n",
+        "        distances = [self.euclidean_distance(data, self.centroids[centroid]) for centroid in self.centroids]\n",
+        "        classification = distances.index(min(distances))\n",
+        "        return classification\n",
+        "\n",
+        "    def fit(self, data):\n",
+        "        self.centroids = {}\n",
+        "        for i in range(self.k):\n",
+        "            self.centroids[i] = data[i]\n",
+        "\n",
+        "        for i in range(self.max_iterations):\n",
+        "            self.classes = {j: [] for j in range(self.k)}\n",
+        "\n",
+        "            for point in data:\n",
+        "                distances = [self.euclidean_distance(point, self.centroids[centroid]) for centroid in self.centroids]\n",
+        "                cluster_index = distances.index(min(distances))\n",
+        "                self.classes[cluster_index].append(point)\n",
+        "\n",
+        "            previous = dict(self.centroids)\n",
+        "            for cluster_index in self.classes:\n",
+        "                self.centroids[cluster_index] = np.average(self.classes[cluster_index], axis=0)\n",
+        "\n",
+        "            isOptimal = True\n",
+        "            for centroid in self.centroids:\n",
+        "                original_centroid = previous[centroid]\n",
+        "                curr = self.centroids[centroid]\n",
+        "                if np.sum((curr - original_centroid)/original_centroid * 100.0) > self.tolerance:\n",
+        "                    isOptimal = False\n",
+        "\n",
+        "            if isOptimal:\n",
+        "                break\n",
+        "\n",
+        "\n",
+        "        self.labels_ = []\n",
+        "        for i in range(len(data)):\n",
+        "            self.labels_.append(self.predict(data[i]))\n",
+        "\n",
+        "def main():\n",
+        "\n",
+        "    iris = load_iris()\n",
+        "    X = iris.data\n",
+        "    y = iris.target\n",
+        "\n",
+        "\n",
+        "    scaler = StandardScaler()\n",
+        "    X = scaler.fit_transform(X)\n",
+        "\n",
+        "\n",
+        "    pca = PCA(n_components=2)\n",
+        "    X_2d = pca.fit_transform(X)\n",
+        "\n",
+        "\n",
+        "    k = 5\n",
+        "    k_means = K_Means(k=k)\n",
+        "    k_means.fit(X_2d)\n",
+        "\n",
+        "\n",
+        "    scor\n",
+        "    print(f\"Silhouette Score (k={k}): {score:.4f}\")\n",
+        "\n",
+        "\n",
+        "    colors = 10 * [\"r\", \"g\", \"b\", \"c\", \"m\", \"y\"]\n",
+        "\n",
+        "    plt.figure(figsize=(8, 6))\n",
+        "    for centroid in k_means.centroids:\n",
+        "        plt.scatter(*k_means.centroids[centroid], marker=\"x\", s=150, linewidths=3, color='black', label=f'Centróide {centroid}')\n",
+        "\n",
+        "    for cluster_index in k_means.classes:\n",
+        "        color = colors[cluster_index]\n",
+        "        for point in k_means.classes[cluster_index]:\n",
+        "            plt.scatter(point[0], point[1], color=color, s=30)\n",
+        "\n",
+        "    plt.title(\"K-Means Clustering com base Iris (sem sklearn.cluster)\")\n",
+        "    plt.xlabel(\"Componente principal 1\")\n",
+        "    plt.ylabel(\"Componente principal 2\")\n",
+        "    plt.legend()\n",
+        "    plt.show()\n",
+        "\n",
+        "if __name__ == \"__main__\":\n",
+        "    main()\n"
+      ],
+      "metadata": {
+        "id": "q8KkI3vRh2BC"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
